--- a/html/mediumclone.html
+++ b/html/mediumclone.html
@@ -34,7 +34,7 @@
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <caption>del testo</caption>
+                                <p.caption>del testo</p>
                             </div>
                             <div class="articleTitle">
                                 <h2>Titolo articolo</h2>
@@ -66,7 +66,7 @@
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <caption>del testo</caption>
+                                <p.caption>del testo</p>
                             </div>
                             <div class="articleTitle">
                                 <h2>Titolo articolo</h2>
@@ -98,7 +98,7 @@
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <caption>del testo</caption>
+                                <p.caption>del testo</p>
                             </div>
                             <div class="articleTitle">
                                 <h2>Titolo articolo</h2>
@@ -130,7 +130,7 @@
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <caption>del testo</caption>
+                                <p.caption>del testo</p>
                             </div>
                             <div class="articleTitle">
                                 <h2>Titolo articolo</h2>
@@ -162,7 +162,7 @@
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <caption>del testo</caption>
+                                <p.caption>del testo</p>
                             </div>
                             <div class="articleTitle">
                                 <h2>Titolo articolo</h2>
