trick flex-container e card blog costruita al 90%

--- a/html/mediumclone.html
+++ b/html/mediumclone.html
@@ -24,23 +24,24 @@
         </div>
     </header>
     <main>
+        <div class="flex-container">
         <section id="feed">
             <div id="categorySelectors">
                 <h3>following</h3>
                 <h3>recommended for you</h3>
             </div>
-            <div id="blogArchive">
+            <div id="feedArchive">
                 <div class="blogCard">   <!--Articolo 1 -->
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <p.caption>del testo</p>
+                                <p class="caption">Kolby Sisk</p>
                             </div>
                             <div class="articleTitle">
-                                <h2>Titolo articolo</h2>
+                                <h2>React state management in 2022 — Return of the Redux</h2>
                             </div>
                             <div class="articleText">
-                                <p>Riassunto articolo</p>
+                                <p>Redux was created in 2015 by Dan Abramov and Andrew Clark as a solution for managing and providing state across an entire React application.</p>
                             </div>
                         </div>
                         <div class="articleFeatures">
@@ -59,29 +60,29 @@
                         </div>
                     </div>
                     <div class="articleThumbnail">
-                        <img src="" alt="">
+                        <img src="../assets/article-thumbnail_1.webp" alt="React state management 2022 article">
                     </div>
                 </div>
                 <div class="blogCard">   <!--Articolo 2 -->
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <p.caption>del testo</p>
+                                <p class="caption">Navoda Nilakshi</p>
                             </div>
                             <div class="articleTitle">
-                                <h2>Titolo articolo</h2>
+                                <h2>How To Sanitize Your Express App Against MongoDB Injection & Cross-Site Scripting</h2>
                             </div>
                             <div class="articleText">
-                                <p>Riassunto articolo</p>
+                                <p>So you will also need to install sanitize-html npm package. The sanitizeHtml() is coming from that package which will be doing the job for us. I ...</p>
                             </div>
                         </div>
                         <div class="articleFeatures">
                             <div class="articleInfo">
                                 <ul>
-                                    <li class="label">Dec 3</li>
-                                    <li class="label">4 min read</li>
-                                    <li class="label">React</li>
-                                    <li class="label">Popular on Medium</li>
+                                    <li class="label">Dec 16</li>
+                                    <li class="label">6 min read</li>
+                                    <li class="label">Web development</li>
+                                    <li class="label">Based on your reading history</li>
                                 </ul>
                             </div>
                             <div class="articleTools">
@@ -91,28 +92,28 @@
                         </div>
                     </div>
                     <div class="articleThumbnail">
-                        <img src="" alt="">
+                        <img src="../assets/article-thumbnail_2.webp" alt="how to sanitize your app">
                     </div>
                 </div>
                 <div class="blogCard">   <!--Articolo 3 -->
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <p.caption>del testo</p>
+                                <p class="caption">OJEBIYI FULNESS</p>
                             </div>
                             <div class="articleTitle">
-                                <h2>Titolo articolo</h2>
+                                <h2>React 18: The Features and The Future</h2>
                             </div>
                             <div class="articleText">
-                                <p>Riassunto articolo</p>
+                                <p>All about the exciting release of React 18 and exploring its new features</p>
                             </div>
                         </div>
                         <div class="articleFeatures">
                             <div class="articleInfo">
                                 <ul>
-                                    <li class="label">Dec 3</li>
+                                    <li class="label">Nov 24</li>
                                     <li class="label">4 min read</li>
-                                    <li class="label">React</li>
+                                    <li class="label">Reactjs</li>
                                     <li class="label">Popular on Medium</li>
                                 </ul>
                             </div>
@@ -123,27 +124,27 @@
                         </div>
                     </div>
                     <div class="articleThumbnail">
-                        <img src="" alt="">
+                        <img src="../assets/article-thumbnail_3.webp" alt="React 18 new features">
                     </div>
                 </div>
                 <div class="blogCard">   <!--Articolo 4 -->
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <p.caption>del testo</p>
+                                <p class="caption">Kolby Sisk</p>
                             </div>
                             <div class="articleTitle">
-                                <h2>Titolo articolo</h2>
+                                <h2>Understanding re-rendering and memoization in React</h2>
                             </div>
                             <div class="articleText">
-                                <p>Riassunto articolo</p>
+                                <p>The following are quick tips to increase performance in your React application by understanding re-rendering and memoization.</p>
                             </div>
                         </div>
                         <div class="articleFeatures">
                             <div class="articleInfo">
                                 <ul>
-                                    <li class="label">Dec 3</li>
-                                    <li class="label">4 min read</li>
+                                    <li class="label">Dec 6</li>
+                                    <li class="label">6 min read</li>
                                     <li class="label">React</li>
                                     <li class="label">Popular on Medium</li>
                                 </ul>
@@ -155,14 +156,14 @@
                         </div>
                     </div>
                     <div class="articleThumbnail">
-                        <img src="" alt="">
+                        <img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization">
                     </div>
                 </div>
                 <div class="blogCard">   <!--Articolo 5 -->
                     <div class="articleBody">
                         <div class="articleSummary">
                             <div class="articleAuthor">
-                                <p.caption>del testo</p>
+                                <p class="caption">del testo</p>
                             </div>
                             <div class="articleTitle">
                                 <h2>Titolo articolo</h2>
@@ -192,7 +193,7 @@
                 </div>
             </div>
         </section>
-        <aside id="sidebar">
+        <aside>
             <div id="connectTotwitter">  <!--Scaricare logo twitter-->
                 <div id="logoConnection">
                     <img src="../assets/Medium_logo.svg" alt="Medium logo">
@@ -278,6 +279,7 @@
                 <a href="#">About</a>
             </div>
         </aside>
+    </div>
     </main>
 
 </body>
