manca solo aggiungere thumbnail relativa agli autori

--- a/html/mediumclone.html
+++ b/html/mediumclone.html
@@ -38,6 +38,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
+                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
                                     <p class="caption">Kolby Sisk</p>
                                 </div>
                                 <div class="articleTitle">
@@ -71,6 +72,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
+                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
                                     <p class="caption">Navoda Nilakshi</p>
                                 </div>
                                 <div class="articleTitle">
@@ -105,6 +107,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
+                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
                                     <p class="caption">OJEBIYI FULNESS</p>
                                 </div>
                                 <div class="articleTitle">
@@ -137,6 +140,7 @@
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
+                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
                                     <p class="caption">Kolby Sisk</p>
                                 </div>
                                 <div class="articleTitle">
@@ -166,24 +170,26 @@
                             <img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization">
                         </div>
                     </div>
-                    <div class="blogCard"> <!--Articolo 5 -->
+                    <div class="blogCard"> <!--Articolo n -->
                         <div class="articleBody">
                             <div class="articleSummary">
                                 <div class="articleAuthor">
-                                    <p class="caption">del testo</p>
+                                    <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
+                                    <p class="caption">Kolby Sisk</p>
                                 </div>
                                 <div class="articleTitle">
-                                    <h2>Titolo articolo</h2>
+                                    <h2>Understanding re-rendering and memoization in React</h2>
                                 </div>
                                 <div class="articleText">
-                                    <p>Riassunto articolo</p>
+                                    <p>The following are quick tips to increase performance in your React application by
+                                        understanding re-rendering and memoization.</p>
                                 </div>
                             </div>
                             <div class="articleFeatures">
                                 <div class="articleInfo">
                                     <ul>
-                                        <li class="label">Dec 3</li>
-                                        <li class="label">4 min read</li>
+                                        <li class="label">Dec 6</li>
+                                        <li class="label">6 min read</li>
                                         <li class="label">React</li>
                                         <li class="label">Popular on Medium</li>
                                     </ul>
@@ -195,7 +201,7 @@
                             </div>
                         </div>
                         <div class="articleThumbnail">
-                            <img src="" alt="">
+                            <img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization">
                         </div>
                     </div>
                 </div>
@@ -262,6 +268,7 @@
                     <h5>Recently saved</h5>
                     <div id="savedArticlesList">
                         <div class="savedArticle"> <!--articolo 1-->
+                            <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
                             <p class="caption">Eva Keiffenheim in Age of Awareness</p>
                             <h5>The Feynman Technique Will Make You Remember What You Read</h5>
                             <ul>
@@ -271,6 +278,7 @@
                             </ul>
                         </div>
                         <div class="savedArticle"> <!--articolo 2-->
+                            <!--<img src="../assets/article-thumbnail_4.webp" alt="React re-rendering and memoization"> -->
                             <p class="caption">chrissy teigen</p>
                             <h5>Hi.</h5>
                             <ul>
